[ST] Console installation (#1598)
Console yaml and olm based installation

---------

Signed-off-by: jkalinic <jkalinic@redhat.com>